# bzlmod-llvm-go-macos

./: .bazelrc  MODULE.bazel  error.md
go/: BUILD.bazel  go.mod
go/app/: BUILD.bazel  app.go
go/lib/: BUILD.bazel  lib.go
go/schemas/echo/: BUILD.bazel  echo.go  echo.proto
