bazel_dep(name = "gazelle", version = "0.35.0")
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "toolchains_llvm", version = "0.10.3")

# also repro on latest commit
# git_override(
    # module_name="toolchains_llvm",
    # remote = "https://github.com/bazel-contrib/toolchains_llvm.git",
    # commit = "1ca11e2755544e5305d442d72018234eca914604",
# )

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "16.0.4",
)
use_repo(llvm, "llvm_toolchain")

register_toolchains("@llvm_toolchain//:all")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")

use_repo(
    go_deps,

    "org_golang_google_grpc",
)

