load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "app_lib",
    srcs = ["app.go"],
    importpath = "github.com/aran/llvm-ar-repro/app",
    visibility = ["//visibility:private"],
    deps = [
        "//go/lib",
        "//go/schemas/echo:echo_go_proto",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "app",
    embed = [":app_lib"],
    visibility = ["//visibility:public"],
)
