load("@rules_proto//proto:defs.bzl", "proto_library")
load("@rules_go//go:def.bzl", "go_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

# gazelle:ignore echo.go
proto_library(
    name = "echo_proto",
    srcs = ["echo.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "echo_go_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    importpath = "github.com/aran/llvm-ar-repro/schemas/echo",
    proto = ":echo_proto",
    visibility = ["//visibility:public"],
)


